<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/defaultCol">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="412dp"
        android:layout_height="633dp"
        android:padding="20dp"
        android:scrollbarStyle="insideOverlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtTitAct"
                style="@style/TitleTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/titAct" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="25dp" />

            <TextView
                android:id="@+id/txtSubtitAct1"
                style="@style/SubtitleTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/subtitAct1" />

            <TextView
                android:id="@+id/txtLegAct1"
                style="@style/LegendTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/legAct1" />

            <TextView
                android:id="@+id/txtAct1"
                style="@style/DefaultTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:justificationMode="inter_word"
                android:text="@string/txtPass1" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="25dp" />

            <TextView
                android:id="@+id/txtSubtitAct2"
                style="@style/SubtitleTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/subtitAct2" />

            <TextView
                android:id="@+id/txtLegAct2"
                style="@style/LegendTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/legAct2" />

            <TextView
                android:id="@+id/txtAct2"
                style="@style/DefaultTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:justificationMode="inter_word"
                android:text="@string/txtAct2"
                android:textColor="#666875" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="25dp" />

            <TextView
                android:id="@+id/txtSubtitAct3"
                style="@style/SubtitleTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="backToMenu"
                android:text="@string/subtitAct3" />

            <TextView
                android:id="@+id/txtAct3"
                style="@style/DefaultTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:justificationMode="inter_word"
                android:text="@string/txtAct3"
                android:textColor="#666875" />

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="420dp"
        android:layout_height="98dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btnPrevAct"
            style="@style/DefaultBtn"
            android:layout_width="wrap_content"
            android:layout_height="110dp"
            android:layout_margin="5dp"
            android:onClick="previous"
            android:text="@string/btnPrevious"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnBackAct"
            style="@style/DefaultBtn"
            android:layout_width="wrap_content"
            android:layout_height="110dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/btnBack"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnNextAct"
            style="@style/DefaultBtn"
            android:layout_width="wrap_content"
            android:layout_height="110dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:onClick="forward"
            android:text="@string/btnNext"
            android:textSize="20sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>